# StyleClaw

./: .env.example  .gitignore  CLAUDE.md  IMPROVEMENT_PLAN.md  README.md  README_CN.md  llms.txt  pyproject.toml
docs/superpowers/plans/: 2026-04-29-bidirectional-phases.md  2026-04-29-llm-thinking.md
docs/superpowers/specs/: 2026-04-22-styleclaw-design.md  2026-04-22-styleclaw-phase1-2-design.md
src/styleclaw/: cli.py
src/styleclaw/agents/: analyze_style.py  design_cases.py  evaluate_result.py  refine_prompt.py  select_model.py
tests/: test_cli.py
tests/agents/: test_analyze_style.py  test_design_cases.py  test_design_cases_error.py  test_evaluate_result.py  test_refine_prompt.py  test_select_model.py  test_thinking_passthrough.py
tests/core/: test_batch_models.py  test_case_generator.py  test_clean_json.py  test_config.py  test_dimension_scores.py  test_image_utils.py  test_max_rounds.py  test_model_select_pass.py  test_models.py  test_prompt_builder.py  test_state_machine.py  test_state_machine_bidirectional.py  test_text_utils.py  test_text_utils_extra.py
tests/orchestrator/: test_actions.py  test_actions_do.py  test_actions_thinking.py  test_cli_run.py  test_executor.py  test_models.py  test_pass2_e2e.py  test_planner.py  test_retest_models.py
tests/scripts/: test_batch_submit.py  test_generate.py  test_generate_refine.py  test_init_project.py  test_migrate.py  test_poll.py  test_report.py
tests/storage/: test_batch_store.py  test_i2i_batch_config.py  test_image_store.py  test_pass_dirs.py  test_project_store.py  test_round_store.py
(+42 files in other folders)
